[package]
name = "json-test"
version = "0.1.0"
edition = "2021"
authors = ["Renaud Denis <mail@renauddenis.com>"]
description = "A testing library for JSON Path assertions in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tylium/json-test-rs"
documentation = "https://docs.rs/json-test"
readme = "README.md"
keywords = ["testing", "json", "jsonpath", "assertions", "validation"]
categories = ["development-tools::testing", "data-structures"]

[dependencies]
anyhow = "1"
thiserror = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonpath-rust = "0"

[dev-dependencies]
pretty_assertions = "1"
test-case = "3"